--- a/index.html
+++ b/index.html
@@ -1,65 +1,55 @@
-<html lang="en" ng-app="socialNetwork">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Social Network</title>
-        <meta name="description" content="SoftUni Social Network">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/normalize.css">
-        <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
-        <link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="app/app.css" />
-        <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-        <base href="/" />
-    </head>
-<body ng-controller="MainCtrl" cz-shortcut-listen="true">
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+<html lang="en" ng-app="issueTracker">
+<head>
+    <meta charset="utf-8">
+    <title>SoftUni Issue Tracker System</title>
+    <meta name="description" content="SoftUni Issue Tracker System">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="app/bootstrapPaper/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="app/bootstrapPaper/custom.min.css">
+    <link rel="stylesheet" href="app/app.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="app/bower_components/html5shiv/dist/html5shiv.js"></script>
+    <script src="app/bower_components/respond/dest/respond.min.js"></script>
+    <![endif]-->
+
+
+<body>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand">Social Network</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+            <a href="../" class="navbar-brand">SoftUni Issue Tracking System</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-          <ul ng-if="isAuthenticated" class="nav navbar-nav">
-            <li>
-              <a href="#/newsFeed">News Feed</a>
-            </li>
-            <li>
-              <a href="#/friendRequests">Friend Requests</a>
-            </li>
-            <li>
-              <a href="#/settings">Settings</a>
-            </li>
-            <li>
-              <a href="#/changePassword">Change Password</a>
-            </li>
-            <li>
-              <a href="#/logout">Logout</a>
-            </li>            
-          </ul>
-
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#/">Home</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </div>
-    
-    <div class="container">
-        <div ng-view />
+</div>
+
+<div class="container">
+    <div class="row">
+        <div ng-view=/>
     </div>
-    
-    <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="app/bower_components/angular/angular.js"></script>
-  <script src="app/bower_components/angular-route/angular-route.js"></script>
-  <script src="app/app.js"></script>
-  <script src="app/common/main-controller.js"></script>
-  <script src="app/users/authentication.js"></script>
-  <script src="app/users/identity.js"></script>
-  <script src="app/home/home-controller.js"></script>
-  <script src="app/news-feed/news-feed-controller.js"></script>
-  <script src="app/news-feed/feed.js"></script>
+</div>
+
+
+<script src="app/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="app/bower_components/angular/angular.js"></script>
+<script src="app/bower_components/angular-route/angular-route.js"></script>
+<script src="app/app.js"></script>
+<script src="app/home/home-controller.js"></script>
+<script src="app/users/authentication.js"></script>
 </body>
 </html>
+
