--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a href="../" class="navbar-brand">SoftUni Issue Tracking System</a>
+            <a href="#/" class="navbar-brand">SoftUni Issue Tracking System</a>
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
