--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,13 +3,14 @@
     <div class="col-md-4 col-md-offset-1 border">
         <h3 id="login-title">Login:</h3>
         <form name="loginUserForm">
-            <label for="username">Username</label>
-            <input type="text" id="username" required="required" ng-model="loginUser.username" class="form-control"/>
+            <label for="username">E-mail</label>
+            <input type="text" id="username" required="required" ng-model="loginUser.Username" class="form-control"/>
             <br/>
             <label for="password">Password</label>
-            <input type="password" required="required" ng-model="loginUser.password" id="password"
-                   class="form-control"/>
+            <input type="password" required="required" ng-model="loginUser.Password" id="password"
+                          class="form-control"/>
             <br/>
+
             <button class="btn btn-primary" ng-disabled="loginUserForm.$invalid" ng-click="login(loginUser)">Login
             </button>
         </form>
@@ -19,8 +20,8 @@
         <div id="register">
             <h3 id="register-title">Create an account:</h3>
             <form name="registerUserForm">
-                <label for="reg-username">Username</label>
-                <input type="text" required="required" ng-model="registerUser.username" id="reg-username"
+                <label for="reg-email">E-mail</label>
+                <input type="email" required="required" ng-model="registerUser.email" id="reg-email"
                        class="form-control"/>
                 <br/>
                 <label for="reg-password">Password</label>
@@ -32,10 +33,7 @@
                 <input type="password" required="required" min-length="6" max-length="100"
                        ng-model="registerUser.confirmPassword" id="reg-confirm-password" class="form-control"/>
                 <br/>
-                <label for="reg-email">E-mail</label>
-                <input type="email" required="required" ng-model="registerUser.email" id="reg-email"
-                       class="form-control"/>
-                <br/>
+
                 <button class="btn btn-primary"
                         ng-disabled="registerUserForm.$invalid || registerUser.password != registerUser.confirmPassword"
                         ng-click="register(registerUser)">Register
