--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
             </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
+            <ul ng-if="isAuthenticated" class="nav navbar-nav">
+                <!--ng-if takes  $scope.isAuthenticated from main-controller.js-->
                 <li>
-                    <a href="#/">Home</a>
+                    <a href="#/dashboard">Dashboard</a>
+                </li>
+                <li>
+                    <a href="#/logout">Logout</a>
                 </li>
             </ul>
         </div>
     </div>
+</div>
+
+<div class="container">
+    {{currentUser.id}}
 </div>
 
 <div class="container">
@@ -47,9 +55,15 @@
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
+<script src="app/bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="app/app.js"></script>
+<script src="app/common/main-controller.js"></script>
 <script src="app/home/home-controller.js"></script>
 <script src="app/users/authentication.js"></script>
+<script src="app/users/identity.js"></script>
+<script src="app/home/home-controller.js"></script>
+<script src="app/dashboard/dashboard-controller.js"></script>
+<script src="app/dashboard/getProjectIssues.js"></script>
 </body>
 </html>
 
