--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,10 +4,10 @@
         <h3 id="login-title">Login:</h3>
         <form name="loginUserForm">
             <label for="username">E-mail</label>
-            <input type="text" id="username" required="required" ng-model="loginUser.Username" class="form-control"/>
+            <input type="text" id="username" required="required" ng-model="loginUser.username" class="form-control"/>
             <br/>
             <label for="password">Password</label>
-            <input type="password" required="required" ng-model="loginUser.Password" id="password"
+            <input type="password" required="required" ng-model="loginUser.password" id="password"
                           class="form-control"/>
             <br/>
 
